new: yeni list eklendi.

--- a/index.html
+++ b/index.html
@@ -11,5 +11,21 @@
     <h3>Yeni Branch</h3>
     <h4>Yeni Branch</h4>
     <h5>Yeni Branch</h5>
+    <h6>Yeni branch eklendi 05.02 de.</h6>
+
+    <div>
+        <div>
+            <h1>
+                deneme
+            </h1>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <button>button</button>
+            <ul>
+                <li>List Çok</li>
+                <li>List Çok</li>
+                <li>List Çok</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
