--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </h1>
             <p>Lorem ipsum dolor sit amet.</p>
             <button>button</button>
+            <button>button 2</button>
             <ul>
                 <li>List Çok</li>
                 <li>List Çok</li>
