--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <title>berkan branch!!</title>
 </head>
+
+<style>
+    body{
+        background-color: blanchedalmond;
+    }
+</style>
+
 <body>
     <h1>Yeni branch!</h1>
     <h2>Yeni branch</h2>
