new: style dosyası değiştirildi.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <style>
     body{
         background-color: blanchedalmond;
+        color: aliceblue;
+        padding: 5px;
+        width: 200px;
     }
 </style>
 
